--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
             "Tests\\": "tests/"
         }
     },
+    "scripts": {
+        "test": "phpunit tests"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9",
         "codeception/codeception": "^4.1",
