--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
         "test": "phpunit tests"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9",
+        "phpunit/phpunit": "^9"
     }
 }
